@@ -1,5 +1,10 @@
 2008-08-07  Jonathan Gonzalez V.  <zeus@gnu.org>
 
+	* rizoma_informes.c (reports_win): Removed the max width to
+	columns on tree_view_sell_rank tree view.
+	(reports_win): Added the proper symbol at the end of every column
+	to show if they are money or percent numbers.
+
 	* administracion_productos.c (admini_box): Changed the column type
 	stock from INT to DOUBLE.
 
